modificação para não usar UF

--- a/main.ipynb
+++ b/main.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cd6138bfd0>"
+       "<IPython.lib.display.IFrame at 0x1e2a8a42290>"
       ]
      },
      "metadata": {},
@@ -157,18 +157,6 @@
     "        value=1,\n",
     "        style={'font-family': 'Arial, sans-serif'}\n",
     "    ),\n",
-    "\n",
-    "    html.Div(children='''\n",
-    "    Sigla UF:\n",
-    "    ''', style={'font-family': 'Arial, sans-serif', 'padding-bottom': '10px', 'padding-top': '20px'}),\n",
-    "\n",
-    "    dcc.Dropdown(\n",
-    "        id='caracteristica-UF-dropdown',\n",
-    "        options=[{'label': uf, 'value': uf} for uf in Sigla_UF], \n",
-    "        value=anos[0],\n",
-    "        style={'font-family': 'Arial, sans-serif'}\n",
-    "    ),\n",
-    "\n",
     "    dcc.Graph(\n",
     "        id='graph-caracteristicas'\n",
     "    ),\n",
@@ -264,8 +252,6 @@
     "        id='graph-porte'\n",
     "    ),\n",
     "\n",
-    "\n",
-    "    \n",
     "    html.Div(children='''\n",
     "    5- Como o perfil do tipo de empresa mudou ao longo dos anos nos estados? Houve crescimento ou redução em relação a um tipo de porte específico?\n",
     "    ''', style={'font-family': 'Arial, sans-serif', 'padding-bottom': '30px','font-size':'20px','font-weight':'bold'}),\n",
@@ -307,6 +293,13 @@
     "    dcc.Graph(\n",
     "        id='graph-perfil'\n",
     "    ),\n",
+    "\n",
+    "    html.Div(children='''\n",
+    "    6- Atualmente, usando os dados mais recentes da base, qual o perfil da distribuição de banda larga dentro do escopo escolhido pelo grupo? escolha escopos que permitam a análise a partir de 2 ou mais parâmetros.\n",
+    "    ''', style={'font-family': 'Arial, sans-serif', 'padding-bottom': '30px','font-size':'20px','font-weight':'bold'}),\n",
+    "\n",
+    "\n",
+    "\n",
     "])\n",
     "\n",
     "@app.callback(\n",
@@ -324,11 +317,10 @@
     "@app.callback(\n",
     "    Output('graph-caracteristicas', 'figure'),\n",
     "    [Input('caracteristica-Ano-dropdown', 'value'),\n",
-    "     Input('caracteristica-MES-dropdown', 'value'),\n",
-    "     Input('caracteristica-UF-dropdown', 'value')]\n",
+    "     Input('caracteristica-MES-dropdown', 'value'),]\n",
     ")\n",
-    "def update_graph_2(ano, mes, uf):\n",
-    "    analise_tecnologias_recentes = df.query(f'ano == {ano} and mes == {mes} and sigla_uf == \"{uf}\"')\n",
+    "def update_graph_2(ano, mes):\n",
+    "    analise_tecnologias_recentes = df.query(f'ano == {ano} and mes == {mes}')\n",
     "    analise_tecnologias_recentes = analise_tecnologias_recentes.groupby('tecnologia')['acessos'].sum()\n",
     "    analise_tecnologias_recentes = pd.DataFrame({'Tecnologia': analise_tecnologias_recentes.index, 'Total de acessos': analise_tecnologias_recentes.values})\n",
     "    analise_tecnologias_recentes = analise_tecnologias_recentes.sort_values(['Total de acessos'], ascending=False)\n",
