--- a/main.ipynb
+++ b/main.ipynb
@@ -29,11 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('testeDados.csv')\n",
+    "df_municipios = pd.read_csv('municipios_se.csv')\n",
     "campos_vazios = df.isnull().sum()\n",
     "mediana_acessos = df['acessos'].median()\n",
     "data = df.drop(columns=[\"id_municipio\", \"sigla_uf\", \"cnpj\"])\n"
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,12 +83,23 @@
     "    df_historico_tecnologia.columns = ['Ano', 'Tecnologia', 'Total de acessos']\n",
     "    df_historico_tecnologia = df_historico_tecnologia.sort_values(['Ano', 'Total de acessos'])\n",
     "\n",
-    "    return df_historico_tecnologia\n"
+    "    return df_historico_tecnologia\n",
+    "\n",
+    "regioes = {\n",
+    "    'Grande Aracaju': ['Aracaju', 'Barra dos Coqueiros', 'Nossa Senhora do Socorro', 'São Cristóvão', \"Itaporanga d'Ajuda\", 'Laranjeiras', 'Riachuelo', 'Maruim', 'Santo Amaro das Brotas'],\n",
+    "    'Leste': ['Capela', 'Japaratuba', 'Siriri', 'Pirambu', 'Rosário do Catete', 'Carmópolis', 'General Maynard', 'Divina Pastora', 'Santa Rosa de Lima'],\n",
+    "    'Baixo São Francisco': ['Canhoba', 'Amparo de São Francisco', 'Telha', 'Propriá', 'Cedro de São João', 'Malhada dos Bois', 'São Francisco', 'Muribeca', 'Santana do São Francisco', 'Neópolis', 'Japoatã', 'Pacatuba', 'Ilha das Flores', 'Brejo Grande'],\n",
+    "    'Médio Sertão': ['Itabi', 'Gracho Cardoso', 'Aquidabã', 'Feira Nova', 'Cumbe', 'Nossa Senhora das Dores'],\n",
+    "    'Agreste Central': ['Carira', 'Nossa Senhora Aparecida', 'São Miguel do Aleixo', 'Ribeirópolis', 'Frei Paulo', 'Pinhão', 'Pedra Mole', 'Macambira', 'São Domingos', 'Campo do Brito', 'Itabaiana', 'Moita Bonita', 'Malhador', 'Areia Branca'],\n",
+    "    'Alto Sertão': ['Canindé de São Francisco', 'Poço Redondo', 'Porto da Folha', 'Gararu', 'Nossa Senhora de Lourdes', 'Nossa Senhora da Glória', 'Monte Alegre de Sergipe'],\n",
+    "    'Centro Sul': ['Simão Dias', 'Poço Verde', 'Tobias Barreto', 'Riachão do Dantas', 'Lagarto'],\n",
+    "    'Sul': ['Salgado', 'Boquim', 'Estância', 'Pedrinhas', 'Arauá', 'Itabaianinha', 'Tomar do Geru', 'Cristinápolis', 'Umbaúba', 'Indiaroba', 'Santa Luzia do Itanhy']\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +117,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e2a8a42290>"
+       "<IPython.lib.display.IFrame at 0x1e2a6b68890>"
       ]
      },
      "metadata": {},
@@ -298,7 +310,30 @@
     "    6- Atualmente, usando os dados mais recentes da base, qual o perfil da distribuição de banda larga dentro do escopo escolhido pelo grupo? escolha escopos que permitam a análise a partir de 2 ou mais parâmetros.\n",
     "    ''', style={'font-family': 'Arial, sans-serif', 'padding-bottom': '30px','font-size':'20px','font-weight':'bold'}),\n",
     "\n",
+    "    html.Div(children='''\n",
+    "    Ano:\n",
+    "    ''', style={'font-family': 'Arial, sans-serif', 'padding-bottom': '10px' , 'padding-top': '20px'}),\n",
     "\n",
+    "    dcc.Dropdown(\n",
+    "        id='caracteristica-Ano-dropdown-7',\n",
+    "        options=[{'label': ano, 'value': ano} for ano in anos], \n",
+    "        value=anos[0],\n",
+    "        style={'font-family': 'Arial, sans-serif'}\n",
+    "    ),\n",
+    "    html.Div(children='''\n",
+    "    Mês:\n",
+    "    ''', style={'font-family': 'Arial, sans-serif', 'padding-bottom': '10px', 'padding-top': '20px'}),\n",
+    "\n",
+    "    dcc.Dropdown(\n",
+    "        id='caracteristica-MES-dropdown-5',\n",
+    "        options=[{'label': mes, 'value': mes} for mes in range(1, 13)],\n",
+    "        value=1,\n",
+    "        style={'font-family': 'Arial, sans-serif'}\n",
+    "    ),\n",
+    "\n",
+    "    dcc.Graph(\n",
+    "        id='graph-porte-velocidade'\n",
+    "    ),\n",
     "\n",
     "])\n",
     "\n",
@@ -412,244 +447,31 @@
     "\n",
     "    return fig\n",
     "\n",
+    "@app.callback( \n",
+    "    Output('graph-porte-velocidade', 'figure'),\n",
+    "    [Input('caracteristica-Ano-dropdown-7', 'value'),\n",
+    "     Input('caracteristica-MES-dropdown-5', 'value'),]\n",
+    ")\n",
+    "def update_graph_8(ano,mes):\n",
+    "    # Sua lógica original para obter os dados\n",
+    "    analise_velocidade_porte = df.query(f'ano == {ano} and mes == {mes}')\n",
+    "    analise_velocidade_porte = analise_velocidade_porte.groupby(['velocidade', 'porte_empresa'])['acessos'].sum()\n",
+    "    analise_velocidade_porte = analise_velocidade_porte.to_frame().reset_index()\n",
+    "\n",
+    "    # Agora, crie o gráfico com base nos dados processados\n",
+    "    fig = px.bar(analise_velocidade_porte, x='velocidade', y='acessos', color='porte_empresa', barmode='group')\n",
+    "\n",
+    "    return fig\n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ano</th>\n",
-       "      <th>Mês</th>\n",
-       "      <th>Porte empresa</th>\n",
-       "      <th>Total de acessos</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>11124.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>2383.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>19504.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>3491.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>34142.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>3242.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>74970.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>8164.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>200964.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>18873.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>366241.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>11848.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>46559.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>7811.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>8804.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>7852.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>2558.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>31795.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>8495.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>81474.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Grande Porte</td>\n",
-       "      <td>59449.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pequeno Porte</td>\n",
-       "      <td>27687.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Ano  Mês  Porte empresa  Total de acessos\n",
-       "0   2012    5   Grande Porte           11124.0\n",
-       "1   2012    5  Pequeno Porte            2383.0\n",
-       "2   2013    5   Grande Porte           19504.0\n",
-       "3   2013    5  Pequeno Porte            3491.0\n",
-       "4   2014    5   Grande Porte           34142.0\n",
-       "5   2014    5  Pequeno Porte            3242.0\n",
-       "6   2015    5   Grande Porte           74970.0\n",
-       "7   2015    5  Pequeno Porte            8164.0\n",
-       "8   2016    5   Grande Porte          200964.0\n",
-       "9   2016    5  Pequeno Porte           18873.0\n",
-       "10  2017    5   Grande Porte          366241.0\n",
-       "11  2017    5  Pequeno Porte           11848.0\n",
-       "12  2018    5   Grande Porte           46559.0\n",
-       "13  2018    5  Pequeno Porte            7811.0\n",
-       "14  2019    5   Grande Porte            8804.0\n",
-       "15  2019    5  Pequeno Porte            7852.0\n",
-       "16  2020    5   Grande Porte            2558.0\n",
-       "17  2020    5  Pequeno Porte           31795.0\n",
-       "18  2021    5   Grande Porte            8495.0\n",
-       "19  2021    5  Pequeno Porte           81474.0\n",
-       "20  2022    5   Grande Porte           59449.0\n",
-       "21  2022    5  Pequeno Porte           27687.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Como o perfil do tipo de empresa mudou ao longo dos anos nos estados? Houve crescimento ou redução em relação a um tipo de porte específico\n",
-    "\n",
-    "historico_acessos_porte = data.query('mes == 5 and ano > 2009 and ano <= 2022')\n",
-    "historico_acessos_porte = historico_acessos_porte.filter(['ano', 'mes', 'porte_empresa', 'acessos'])\n",
-    "historico_acessos_porte = historico_acessos_porte.groupby(['ano', 'mes', 'porte_empresa'])['acessos'].sum()\n",
-    "historico_acessos_porte = historico_acessos_porte.to_frame()\n",
-    "historico_acessos_porte = historico_acessos_porte.reset_index()\n",
-    "historico_acessos_porte.columns= ['Ano', 'Mês', 'Porte empresa', 'Total de acessos']\n",
-    "historico_acessos_porte"
-   ]
+   "source": []
   }
  ],
  "metadata": {
