alteração em alguns graficos

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,12 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('testeDados.csv')\n",
-    "df_municipios = pd.read_csv('municipios_se.csv')\n",
     "campos_vazios = df.isnull().sum()\n",
     "mediana_acessos = df['acessos'].median()\n",
     "data = df.drop(columns=[\"id_municipio\", \"sigla_uf\", \"cnpj\"])\n"
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,20 +51,17 @@
     "df['transmissao'].fillna('outra', inplace=True)\n",
     "df['velocidade'].fillna('512kbps a 2Mbps', inplace=True)\n",
     "df['acessos'].fillna(mediana_acessos, inplace=True)\n",
-    "df['produto'].fillna('internet', inplace=True)\n",
     "df = df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "anos = sorted(df['ano'].unique())\n",
     "df_media_por_mes = df.groupby(['mes','ano'])['acessos'].mean().reset_index()\n",
-    "\n",
-    "Sigla_UF = sorted(df['sigla_uf'].unique())\n",
     "\n",
     "data_estado = df.groupby(by=[\"ano\", \"mes\", \"empresa\", \"porte_empresa\", \"tecnologia\", \"transmissao\", \"velocidade\",\"id_municipio\", \"sigla_uf\", \"cnpj\"], as_index=False).sum()\n",
     "\n",
@@ -83,23 +79,12 @@
     "    df_historico_tecnologia.columns = ['Ano', 'Tecnologia', 'Total de acessos']\n",
     "    df_historico_tecnologia = df_historico_tecnologia.sort_values(['Ano', 'Total de acessos'])\n",
     "\n",
-    "    return df_historico_tecnologia\n",
-    "\n",
-    "regioes = {\n",
-    "    'Grande Aracaju': ['Aracaju', 'Barra dos Coqueiros', 'Nossa Senhora do Socorro', 'São Cristóvão', \"Itaporanga d'Ajuda\", 'Laranjeiras', 'Riachuelo', 'Maruim', 'Santo Amaro das Brotas'],\n",
-    "    'Leste': ['Capela', 'Japaratuba', 'Siriri', 'Pirambu', 'Rosário do Catete', 'Carmópolis', 'General Maynard', 'Divina Pastora', 'Santa Rosa de Lima'],\n",
-    "    'Baixo São Francisco': ['Canhoba', 'Amparo de São Francisco', 'Telha', 'Propriá', 'Cedro de São João', 'Malhada dos Bois', 'São Francisco', 'Muribeca', 'Santana do São Francisco', 'Neópolis', 'Japoatã', 'Pacatuba', 'Ilha das Flores', 'Brejo Grande'],\n",
-    "    'Médio Sertão': ['Itabi', 'Gracho Cardoso', 'Aquidabã', 'Feira Nova', 'Cumbe', 'Nossa Senhora das Dores'],\n",
-    "    'Agreste Central': ['Carira', 'Nossa Senhora Aparecida', 'São Miguel do Aleixo', 'Ribeirópolis', 'Frei Paulo', 'Pinhão', 'Pedra Mole', 'Macambira', 'São Domingos', 'Campo do Brito', 'Itabaiana', 'Moita Bonita', 'Malhador', 'Areia Branca'],\n",
-    "    'Alto Sertão': ['Canindé de São Francisco', 'Poço Redondo', 'Porto da Folha', 'Gararu', 'Nossa Senhora de Lourdes', 'Nossa Senhora da Glória', 'Monte Alegre de Sergipe'],\n",
-    "    'Centro Sul': ['Simão Dias', 'Poço Verde', 'Tobias Barreto', 'Riachão do Dantas', 'Lagarto'],\n",
-    "    'Sul': ['Salgado', 'Boquim', 'Estância', 'Pedrinhas', 'Arauá', 'Itabaianinha', 'Tomar do Geru', 'Cristinápolis', 'Umbaúba', 'Indiaroba', 'Santa Luzia do Itanhy']\n",
-    "}\n"
+    "    return df_historico_tecnologia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +102,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1e2a6b68890>"
+       "<IPython.lib.display.IFrame at 0x1e2aff08c90>"
       ]
      },
      "metadata": {},
@@ -335,6 +320,10 @@
     "        id='graph-porte-velocidade'\n",
     "    ),\n",
     "\n",
+    "        dcc.Graph(\n",
+    "        id='graph-porte-tecnologia'\n",
+    "    ),\n",
+    "\n",
     "])\n",
     "\n",
     "@app.callback(\n",
@@ -344,7 +333,7 @@
     "\n",
     "def update_graph(selected_ano):\n",
     "    df_ano_selecionado = df_media_por_mes[df_media_por_mes['ano'] == selected_ano]\n",
-    "    fig_ano_mes = px.bar(df_ano_selecionado, x='mes', y='acessos', title=f'Média de Acessos por Mês no Ano de: {selected_ano}', barmode='group')\n",
+    "    fig_ano_mes = px.line(df_ano_selecionado, x='mes', y='acessos', title=f'Média de Acessos por Mês no Ano de: {selected_ano}',markers=True, color_discrete_sequence=[\"#24389e\", \"#23979b\"])\n",
     "    \n",
     "    return fig_ano_mes\n",
     "\n",
@@ -360,7 +349,7 @@
     "    analise_tecnologias_recentes = pd.DataFrame({'Tecnologia': analise_tecnologias_recentes.index, 'Total de acessos': analise_tecnologias_recentes.values})\n",
     "    analise_tecnologias_recentes = analise_tecnologias_recentes.sort_values(['Total de acessos'], ascending=False)\n",
     "\n",
-    "    fig = px.bar(analise_tecnologias_recentes, x='Tecnologia', y='Total de acessos', title='Análise de Tecnologias Recentes')\n",
+    "    fig = px.line(analise_tecnologias_recentes, x='Tecnologia', y='Total de acessos', title='Análise de Tecnologias Recentes', markers=True, color_discrete_sequence=[\"#24389e\", \"#23979b\"])\n",
     "    return fig\n",
     "# Callback para atualizar o gráfico\n",
     "@app.callback(\n",
@@ -460,6 +449,22 @@
     "\n",
     "    # Agora, crie o gráfico com base nos dados processados\n",
     "    fig = px.bar(analise_velocidade_porte, x='velocidade', y='acessos', color='porte_empresa', barmode='group')\n",
+    "\n",
+    "    return fig\n",
+    "\n",
+    "@app.callback( \n",
+    "    Output('graph-porte-tecnologia', 'figure'),\n",
+    "    [Input('caracteristica-Ano-dropdown-7', 'value'),\n",
+    "     Input('caracteristica-MES-dropdown-5', 'value'),]\n",
+    ")\n",
+    "def update_graph_8(ano,mes):\n",
+    "    # Sua lógica original para obter os dados\n",
+    "    analise_porte_tecnologia = df.query(f'ano == {ano} and mes == {mes}')\n",
+    "    analise_porte_tecnologia = analise_porte_tecnologia.groupby(['tecnologia', 'porte_empresa'])['acessos'].sum()\n",
+    "    analise_porte_tecnologia = analise_porte_tecnologia.to_frame().reset_index()\n",
+    "\n",
+    "    # Agora, crie o gráfico com base nos dados processados\n",
+    "    fig = px.bar(analise_porte_tecnologia, x='tecnologia', y='acessos', color='porte_empresa', barmode='group')\n",
     "\n",
     "    return fig\n",
     "\n",
